--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,62 @@
-# === FLUTTER ===
+# ------------------------------
+# ⚙️ Flutter / Dart
+# ------------------------------
+**/doc/api/
+**/ios/Flutter/.last_build_id
 .dart_tool/
-.packages
-build/
-.pub/
 .flutter-plugins
 .flutter-plugins-dependencies
-.melos_tool/
+.pub-cache/
+.pub/
+build/
+*.dart.js
+*.info.json
+
+# Obfuscation and symbolication
+app.*.symbols
+app.*.map.json
+
+# Android
+/android/app/debug
+/android/app/profile
+/android/app/release
+
+# Misc
+*.log
+*.pyc
+*.swp
+.DS_Store
+.atom/
+.build/
+.buildlog/
+.history
+.svn/
+.swiftpm/
+migrate_working_dir/
+
+# IntelliJ / VS Code
+*.iml
+*.ipr
+*.iws
 .idea/
 .vscode/
-*.iml
 
-# === NODE.JS BACKEND ===
+# ------------------------------
+# 🟢 Node.js / Backend
+# ------------------------------
 node_modules/
-.env
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.env
+.env.*        # cualquier .env.local, .env.dev, etc.
+dist/
+coverage/
 
-# === SISTEMA ===
-.DS_Store
-*.log
+# ------------------------------
+# 📦 General
+# ------------------------------
+*.class
+*.lock
+package-lock.json
+yarn.lock
